# IncidentWise

./: .gitignore  COLAB_DEMO.md  LICENSE  README.md  backup_to_restore.py  colab_bootstrap.py
incidentwise/: .env.example  .gitignore  PUBLISHING.md  README.md  analytics.py  app.py  config.py  drills.py  embeddings.py  facts.py  guardrails.py  handover.py  history.py  ingest.py  ocr.py  ocr_cache.py  pdf_forensics.py  permits.py  plant_model.json.example  rag.py  refresh_corpus.bat  requirements.txt  retrieval.py  scenario.py  seed_permits.py  simops.py  testbench.py  triage.py  verticals.py
incidentwise/evals/: PLAYGROUND.md  PLAYGROUND_round2.md  REPORT.md  REPORT_round2.md  compare_scenarios.py  golden_seed.jsonl  make_golden.py  parse_log.py  run_evals.py  run_playground.py
incidentwise/static/: app.jsx  classic.html  index.html  modern.html
safety-pdf-crawler/: .gitignore  README.md  pyproject.toml  seeds.example.yaml  seeds.yaml
safety-pdf-crawler/src/safety_pdf_crawler/: __init__.py  cli.py  config.py  crawler.py  downloader.py  manifest.py  utils.py
safety-pdf-crawler/tests/: test_downloader.py  test_manifest.py  test_utils.py
