[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "safety-pdf-crawler"
version = "0.1.0"
description = "Polite crawler for downloading public Indian process-safety PDFs with full source provenance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["crawler", "pdf", "safety", "process-safety", "india", "ndma", "oisd"]
authors = [
    { name = "safety-pdf-crawler authors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "crawl4ai>=0.4.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.6",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
safety-pdf-crawler = "safety_pdf_crawler.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/safety_pdf_crawler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
